# Easy-Tensor-Compiler

./: CMakeLists.txt  README.md
include/: debug.hpp  neural_network.hpp  nn_node.hpp  tensor.hpp
src/: debug.cpp  main.cpp  neural_network.cpp  nn_node.cpp  tensor.cpp
tests/end2end/: 1.ans  1.cpp  2.ans  2.cpp  CMakeLists.txt  test.py
tests/unit_tests/: CMakeLists.txt  tests.cpp
